css/style.css
/* initial important class */

.sports-main-nav > ul > li a, 
 .sports-main-nav > ul li a:hover {
    text-decoration: none;
    color: white;
 }
 
 .sports-main-nav > ul > li a {
    text-decoration: none;
    color: white;
 }

